Move to G1 garbage collector